--- a/package.json
+++ b/package.json
@@ -4,14 +4,20 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon index.js",
+    "start": "node index.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.18.2",
     "contentful": "^5.0.5",
+    "dotenv": "^4.0.0",
     "express": "^4.16.2",
     "twilio": "^3.11.0"
+  },
+  "devDependencies": {
+    "nodemon": "^1.14.11"
   }
 }
