--- a/package.json
+++ b/package.json
@@ -6,9 +6,10 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon index.js",
-    "start": "node index.js"
+    "start": "node index.js",
+    "deploy": "now --public; now alias"
   },
-  "author": "",
+  "author": "Charlie Chrisman <charlie.chrisman@gmail.com>",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.18.2",
@@ -19,5 +20,10 @@
   },
   "devDependencies": {
     "nodemon": "^1.14.11"
+  },
+  "now": {
+    "alias": "contentful-sms-jokes",
+    "dotenv": true,
+    "public": true
   }
 }
