2nd times a charm

--- a/package.json
+++ b/package.json
@@ -2,14 +2,13 @@
   "name": "contentful-sms-jokes",
   "version": "0.0.1",
   "description": "Contentful SMS Jokes App",
-  "main": "index.js",
+  "main": "server.prod.js",
   "scripts": {
-    "webpack-watch": "webpack -d --watch",
-    "express-server": "nodemon server",
-    "build-dev": "webpack -d",
-    "dev": "concurrently --kill-others \"npm run webpack-watch\" \"npm run express-server\"",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "deploy": "now --public -e NODE_ENV=production && now alias"
+    "dev": "nodemon server.dev.js",
+    "build-prod": "webpack --config webpack.prod.js",
+    "deploy": "yarn run build-prod && now --public -e NODE_ENV=production && now alias && now rm contentful-sms-jokes --safe --yes",
+    "now-start": "node server.prod.js"
   },
   "repository": {
     "type": "git",
@@ -17,9 +16,9 @@
   },
   "author": "Charlie Chrisman <charlie@contentful.com>",
   "license": "MIT",
-  "private": false,
   "dependencies": {
     "body-parser": "^1.18.2",
+    "compression": "^1.7.1",
     "contentful": "^5.1.0",
     "dotenv": "^5.0.0",
     "express": "^4.16.2",
@@ -31,12 +30,15 @@
     "babel-loader": "^7.1.2",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
-    "concurrently": "^3.5.1",
+    "html-webpack-plugin": "^2.30.1",
     "nodemon": "^1.14.12",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
-    "webpack": "^3.11.0"
+    "uglifyjs-webpack-plugin": "^1.1.8",
+    "webpack": "^3.11.0",
+    "webpack-dev-middleware": "^2.0.5",
+    "webpack-merge": "^4.1.1"
   }
 }
